# phoenix

./: .gitignore  .gitmodules  Cargo.toml  README.md  todo.txt
graphic-tests/: Cargo.toml
graphic-tests/assets/shaders/fragment/: basic.frag
graphic-tests/src/: args_parser.rs  image.rs  macros.rs  main.rs  tests.rs  utils.rs  workspace.rs
graphic-tests/src/tests/: basic_2d_geometries.rs  basic_2d_textures.rs  basic_2d_transformations.rs  basic_3d_geometries.rs  basic_3d_lights.rs
phoenix/: Cargo.toml
phoenix/src/: color.rs  common.rs  components.rs  entities.rs  entity_manager.rs  events.rs  graphics_api.rs  lib.rs  managers.rs  polygons.rs  prototype.rs  render.rs  renderer.rs  shaders.rs  systems.rs  testing.rs  window.rs
phoenix/src/components/: color.rs  geometry.rs  light.rs  material.rs  plane_geometry.rs  shaders.rs  solid_geometry.rs  texture.rs  transformer.rs
phoenix/src/components/geometry/: basic.rs  plane.rs  solid.rs  triangle.rs
phoenix/src/entities/: entity.rs  preprocessing.rs
phoenix/src/events/: action.rs  condition.rs  keyboard_input.rs  keys_binding.rs  manager.rs  user_input.rs  world_events.rs
phoenix/src/graphics_api/: opengl.rs
phoenix/src/managers/: entity.rs  scene.rs
phoenix/src/polygons/: triangle.rs
phoenix/src/renderer/: opengl.rs  shaders.rs  vulkan.rs
phoenix/src/renderer/opengl/: common.rs  (+3 more)
phoenix/src/shaders/: shader.rs  shader_manager.rs  shader_program.rs  utils.rs
phoenix/src/systems/: camera.rs  lighting.rs  performance.rs  scaler.rs  scene.rs
phoenix/src/window/: glfw_lib_config.rs  glfw_window.rs
(+33 files in other folders)
