[package]
name = "graphic-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
glfw-sys = { path = "../glfw-sys" }
phoenix = { path = "../phoenix" }
gl = "0.14.0"
image = "0.25.1"
thiserror = "2.0.3"
colored = "3.0.0"
cgmath = "0.18.0"
clap ={ version = "4.2.7", features = ["derive"] }

[dev-dependencies]
serial_test = "3.1.1"
