[package]
name = "phoenix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
serial_test = "1.0.0"

[dependencies]
thiserror = "1.0"
glfw-sys = { path = "../glfw-sys" }
gl = "0.14.0"
gl_loader = "0.1.2"